[package]
name = "rustc-hex"
version = "2.1.0"
authors = ["The Rust Project Developers", "debris <marek.kotewicz@gmail.com>", "Robert Habermeier"]
license = "MIT/Apache-2.0"
repository = "https://github.com/debris/rustc-hex"
homepage = "https://github.com/debris/rustc-hex"
keywords = ["rustc", "serialize", "hex"]
description = """
rustc-serialize compatible hex conversion traits
"""
edition = "2018"

[features]
default = ["std"]
std = []

[dependencies]
